--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="container">
         <div id="left">
             <!-- hier komt de klok -->
+             hier komt de klok
         </div>
         <div id="middle">
             <!-- Hier komt de reizigers info -->
