--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         </div>
         <div id="right">
             <!-- hier komt het spoor nummer -->
+             <div id="vierkant">
+                <div id="vierkant2">x</div>
+                <div id="spoor">spoor</div>
+                <div id="id18">18</div>
+                <div id="b">b</div>
+             </div>
         </div>
     </div>
 </body>
