--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
         </div>
         <div id="middle">
             <!-- Hier komt de reizigers info -->
+             <div id="grootVierkantInHetMidden"></div>
         </div>
         <div id="right">
             <!-- hier komt het spoor nummer -->
-             <div id="vierkant">
-                <div id="vierkant2">x</div>
+             <div id="grootWitVierkant">
+                <div id="kleinBlauwVierkantje"></div>
                 <div id="spoor">spoor</div>
                 <div id="id18">18</div>
                 <div id="b">b</div>
              </div>
         </div>
     </div>
+
+
+
+    <div id="intercity">Intercity</div>
+
+
 </body>
 </html>
