--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weekopdracht - NS-Treinbord</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
     <div id="container">
-        <div id="left">
-            <!-- hier komt de klok -->
-             hier komt de klok
+      <div id="left">
+        <!-- hier komt de klok -->
+        <div class="cirkel">
+            klok
         </div>
-        <div id="middle">
-            <!-- Hier komt de reizigers info -->
-             <div id="grootVierkantInHetMidden"></div>
+
+
+      </div>
+      <div id="middle">
+        <!-- Hier komt de reizigers info -->
+        <div id="grootVierkantInHetMidden"></div>
+      </div>
+      <div id="right">
+        <!-- hier komt het spoor nummer -->
+        <div id="grootWitVierkant">
+          <div id="kleinBlauwVierkantje"></div>
+          <div id="spoor">spoor</div>
+          <div id="id18">18</div>
+          <div id="b">b</div>
         </div>
-        <div id="right">
-            <!-- hier komt het spoor nummer -->
-             <div id="grootWitVierkant">
-                <div id="kleinBlauwVierkantje"></div>
-                <div id="spoor">spoor</div>
-                <div id="id18">18</div>
-                <div id="b">b</div>
-             </div>
-        </div>
+      </div>
     </div>
-
-
 
     <div id="intercity">Intercity</div>
 
-
-</body>
+    <div id="Heerlen">Heerlen</div>
+  </body>
 </html>
